[package]
name = "ccgen_rs"
version = "0.1.0"
edition = "2024"
description = "A fast, flexible, and customizable credit card number generator library for Rust. Generates valid (Luhn-compliant) credit card numbers for testing, QA, and development."
authors = ["Junaid Rahman <junaid.cloud2@gmail.com>"]
license = "MIT"
repository = "https://github.com/Junaid433/CCGen_rs"
documentation = "https://docs.rs/ccgen_rs"
homepage = "https://github.com/Junaid433/CCGen_rs"
readme = "README.md"
keywords = ["credit-card", "generator", "luhn", "testing", "qa"]
categories = ["development-tools::testing", "algorithms", "data-structures"]
exclude = [".github/"]

[badges]
actions = { repository = "Junaid433/CCGen_rs", branch = "main", workflow = "Cargo Test" }

[dependencies]
rand = "0.9.2"
